--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.6.1" }
-dioxus-sdk = { version = "0.6.0", features=["storage"]}
+dioxus-sdk = { version = "0.6.0", features=["storage"] }
+dioxus-desktop = "0.6.1"
 dirs = "5.0.1"
 reqwest = { version = "0.12.9" }
-tokio = "1.42.0"
 zip = "2.2.2"
 
 [features]
