--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,6 @@
+[build]
+rustflags = ["--cfg=web_sys_unstable_apis"]
+
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-Z", "threads=8", "-C", "link-arg=-fuse-ld=lld"]
 
