--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,16 @@ edition = "2021"
 [dependencies]
 dioxus = { version = "0.6.1" }
 dioxus-sdk = { version = "0.6.0", features=["storage"] }
-dioxus-desktop = "0.6.1"
+# dioxus-desktop = "0.6.1"
 dirs = "5.0.1"
 reqwest = { version = "0.12.9" }
-zip = "2.2.2"
+zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
+rfd = "0.15.2"
+web-sys = { version = "0.3.77", default-features = false, features = ["Window"] }
+
 
 [features]
-default = ["desktop"]
+default = ["web"]
 web = ["dioxus/web"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
