--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -2,7 +2,7 @@
 
 # App (Project) Name
 name = "Cobalt Installer"
-default_platform = "desktop"
+default_platform = "web"
 
 [bundle]
 identifier = "com.divinedragonfanclub"
