Rename binary and fix missing SAMMIE icon on MacOS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "installer"
+name = "CobaltInstaller"
 version = "0.1.0"
 authors = ["DogeThis <thedogethis@gmail.com>"]
 edition = "2021"
